<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_gravity="center"
    android:background="@drawable/bg_roundretangle_white_shape"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_app_language"
        android:padding="@dimen/space_10"
        android:textSize="@dimen/font_18"
        android:layout_marginTop="@dimen/space_10"
        android:gravity="center"
        android:textColor="@color/darkgray"/>
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_app_language"
        android:textSize="@dimen/font_16"
        android:layout_marginBottom="@dimen/space_10"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/darkgray"/>
    <RadioGroup
        android:id="@+id/rg_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_marginBottom="@dimen/space_10"
        android:gravity="center_vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_1"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/rb_language_zh"
            android:button="@null"
            android:layout_width="@dimen/space_60"
            android:layout_height="@dimen/space_60"
            android:background="@drawable/bg_circle_white_blue_selector"
            android:text="@string/language_zh"
            android:textColor="@drawable/text_color_blue_white_selector"
            android:textSize="@dimen/font_16"
            android:gravity="center"
            android:checked="true"
            android:layout_margin="@dimen/space_10"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_1"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/rb_language_en"
            android:button="@null"
            android:layout_width="@dimen/space_60"
            android:layout_height="@dimen/space_60"
            android:background="@drawable/bg_circle_white_blue_selector"
            android:text="@string/language_en"
            android:textColor="@drawable/text_color_blue_white_selector"
            android:textSize="@dimen/font_16"
            android:gravity="center"
            android:layout_margin="@dimen/space_10"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_1"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/rb_language_ms"
            android:button="@null"
            android:layout_width="@dimen/space_60"
            android:layout_height="@dimen/space_60"
            android:background="@drawable/bg_circle_white_blue_selector"
            android:text="@string/language_ms"
            android:textColor="@drawable/text_color_blue_white_selector"
            android:textSize="@dimen/font_16"
            android:gravity="center"
            android:layout_margin="@dimen/space_10"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_1"
            android:layout_weight="1" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:background="@color/lightgray" />
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:minWidth="@dimen/space_300"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:gravity="center"
            android:padding="@dimen/space_10"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/font_16"
            />

        <View
            android:layout_width="@dimen/space_1"
            android:layout_height="match_parent"
            android:background="@color/lightgray"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:gravity="center"
            android:padding="@dimen/space_10"
            android:textSize="@dimen/font_16"
            android:textColor="@color/light_blue"
            />
    </LinearLayout>
</LinearLayout>