<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_10"
    android:background="@mipmap/bg_main"
    tools:context="com.uroad.malaysiaetc.activity.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:padding="@dimen/space_10"
            android:visibility="gone"
            android:background="@color/transparent"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_logo"/>
        <ImageButton
            android:id="@+id/ib_swith_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_language_zh"
            android:layout_centerVertical="true"
            android:padding="@dimen/space_10"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_roundretangle_light_gray_shape"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/ic_main_pager"
            >

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_carousel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <LinearLayout
                android:id="@+id/ll_count"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_height="@dimen/space_30" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/space_10"
            android:gravity="center">
            <RelativeLayout
                android:id="@+id/rl_card_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="@dimen/space_5"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic__card_charge"/>
                <TextView
                    android:layout_width="@dimen/space_80"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:textColor="@color/light_blue"
                    android:singleLine="true"
                    android:text="@string/etc_charge"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_card_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_card_query"/>
                <TextView
                    android:layout_width="@dimen/space_80"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/etc_query"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:textColor="@color/light_blue"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_my_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingRight="@dimen/space_5"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_my_device"/>
                <TextView
                    android:layout_width="@dimen/space_80"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:text="@string/etc_my_device"
                    android:singleLine="true"
                    android:textColor="@color/light_blue"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/space_10"
            android:gravity="center">
            <RelativeLayout
                android:id="@+id/rl_charge_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="@dimen/space_5"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_charge_record"/>
                <TextView
                    android:layout_width="@dimen/space_80"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:textColor="@color/light_blue"
                    android:singleLine="true"
                    android:text="@string/etc_recharge_record"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_consume_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_consume_record"/>
                <TextView
                    android:layout_width="@dimen/space_80"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/etc_consumer_record"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:singleLine="true"
                    android:textColor="@color/light_blue"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_business_instroduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingRight="@dimen/space_5"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_business_introduction"/>
                <TextView
                    android:layout_width="@dimen/space_80"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:text="@string/etc_business_introduction"
                    android:singleLine="true"
                    android:textColor="@color/light_blue"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/space_10"
            android:paddingBottom="@dimen/space_10"
            android:gravity="center">
            <RelativeLayout
                android:id="@+id/rl_user_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="@dimen/space_5"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_user_guide"/>
                <TextView
                    android:layout_width="@dimen/space_80"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:textColor="@color/light_blue"
                    android:text="@string/etc_user_guide"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_customer_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_customer_service"/>
                <TextView
                    android:layout_width="@dimen/space_80"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/etc_customer_service"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:textColor="@color/light_blue"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_user_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingRight="@dimen/space_5"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_user_center"/>
                <TextView
                    android:layout_width="@dimen/space_80"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:text="@string/etc_setting"
                    android:singleLine="true"
                    android:textColor="@color/light_blue"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
